# trace-cli

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
docs/: kanxue-article.md
src/: func_stats.rs  main.rs  output.rs  session.rs
src-web/src/components/: TabPanel.tsx  TraceTable.tsx
src-web/src/components/dep-tree/: DagGraphView.tsx  ExpressionTreeView.tsx
src-web/src/hooks/: useResizableColumn.ts
src-web/src/types/: trace.ts
src/core/: chunk_scan.rs  def_use.rs  insn_class.rs  merge.rs  mod.rs  parallel.rs  parallel_types.rs  parser.rs  phase2.rs  scanner.rs  slicer.rs
src/flat/: archives.rs  convert.rs  line_index.rs
src/index/: cache.rs  mod.rs
src/taint/: dep_tree.rs
unidbg-patch/: AssemblyCodeDumper.java  RegAccessPrinter.java
