[package]
name = "trace-cli"
version = "0.1.0"
edition = "2021"
description = "AI-first ARM64 trace analysis tool"

[[bin]]
name = "trace-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = { version = "1", features = ["union", "serde"] }
bitvec = { version = "1", features = ["serde"] }
rustc-hash = "2"
anyhow = "1"
memmap2 = "0.9"
memchr = "2"
bincode = "1"
sha2 = "0.10"
dirs = "5"
rayon = "1"
